# CS224R_project

./: README.md  modal_requirements.txt  modal_train.py  pyproject.toml
evaluation/: countdown.py  countdown_eval.py  sample.sh  sample_modal.sh  view_passk.ipynb
evaluation/eval_results/: sft_full_e6.json
ipo_trainer/: ipo.py  ipo_dataset.py  train_ipo.sh  train_ipo_modal.sh
proposal/: cs224r_proposal_2026.tex  reference.bib
rloo_trainer/: rloo.py  rloo_dataset.py  rloo_update_worker.py  sampling_worker.py  train_rloo.sh  train_rloo_modal.sh
sft_trainer/: sft.py  sft_dataset.py  train_sft.sh  train_sft_modal.sh  upload_model_hf_sft.sh  upload_sft.py
